--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "chromedriver": "^123.0.0",
-    "selenium-webdriver": "^4.18.1"
+    "selenium-webdriver": "^4.18.1",
+    "cypress": "^13.7.2"
   },
   "devDependencies": {
     "jest": "^29.7.0"
